# beeberboardsandcards

./: .claude.md  CLAUDE.md  README.md
app/: .env.example  index.html  package-lock.json  package.json  server.ts  vite.config.ts
app/src/: App.tsx  api.ts  constants.ts  index.css  types.ts
app/src/components/: UI.tsx
app/src/services/: gemini.ts
app/src/stages/: ArtStage.tsx  BalanceStage.tsx  BriefStage.tsx  DesignStage.tsx  ExportStage.tsx  LayoutStage.tsx
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: project.py
backend/app/routers/: export.py  generate.py  projects.py
backend/app/schemas/: project.py
backend/app/services/: card_generator.py  concept_generator.py  pdf_export.py  tts_export.py
backend/tests/: conftest.py  test_api.py  test_card_generator.py  test_concept_generator.py  test_pdf_export.py  test_tts_export.py
research/: app-architecture.md  board-and-card-game-landscape.md  competitive-landscape.md  implementation-plan.md  prd.md  tts-integration.md  user-personas.md
